...
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/md_theme_dark_shadow"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_view_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_weight="0.7"
                android:choiceMode="singleChoice" />
...
