...
            android:layout_weight="0.3"
            android:text="@string/continue_button"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/cancel_Booking_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="gone"
        android:text="@string/cancel_booking"
        android:layout_margin="@dimen/activity_vertical_margin"
...
