<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:id="@+id/book_details"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".presentation.bookTab.BookDetailsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/round_trip"
            android:textSize="20sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_trip_switch"
            style="@style/Widget.Material3.CompoundButton.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/pick_depart_date"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_margin="10dp"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/depart"
        android:textColor="@color/md_theme_dark_shadow"
        app:icon="@drawable/ic_round_today_24"
        app:iconGravity="textStart"
        app:iconSize="20dp" />

    <Button
        android:id="@+id/pick_return_date"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/return_flight"
        android:textColor="@color/md_theme_dark_shadow"
        android:visibility="gone"
        app:icon="@drawable/ic_round_calendar_month_24"
        app:iconGravity="textStart"
        app:iconSize="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/subtract_button"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_round_remove_24"
            app:iconSize="35dp" />

        <Button
            android:id="@+id/pick_num_passengers"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.33"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="@color/md_theme_dark_shadow"
            app:icon="@drawable/ic_round_person_24"
            app:iconGravity="textStart"
            app:iconSize="20dp" />

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="@drawable/ic_round_add_24"
            app:iconSize="35dp" />
    </LinearLayout>

    <Button
        android:id="@+id/search_flights_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:enabled="false"
        android:layout_margin="10dp"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/search_flights"
        android:textColor="@color/design_default_color_background"
        android:textStyle="bold"
        app:iconGravity="textStart"
        app:iconSize="20dp" />



</LinearLayout>