<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.bookTab.DestinationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_destination"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/choose_destination">

        <AutoCompleteTextView
            android:id="@+id/auto_destination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

</FrameLayout>